--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-- 8.9.0
+- stable
 cache:
   directories:
   - node_modules
@@ -8,8 +8,8 @@ before_install:
 - npm install hexo-cli -g
 install:
 - npm install
-before_script:
-  - npm install -g gulp
+# before_script:
+# - npm install -g gulp
 script:
 - hexo clean
 - hexo generate
