--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
 - npm install hexo-cli -g
 install:
 - npm install
-# before_script:
-# - npm install -g gulp
+before_script:
+  - npm install -g gulp
 script:
 - hexo clean
 - hexo generate && gulp
