--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,6 @@ branches:
 env:
  global:
    # Github Pages(github仓库地址)git@github.com:xqmGitHub/xqmgithub.github.io
-   - GH_REF: github.com/xqmgithub/xqmgithub.github.io
+   - GH_REF: github.com/xqmgithub/xqmgithub.github.io.git
    # Coding Pages(coding仓库地址)git@git.coding.net:xqmcode/xqmcode.git
-   - CO_REF: git.coding.net/xqmcode/xqmcode.coding.me.git
+   - CO_REF: git.coding.net/xqmcode/xqmcode.git
