--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,25 @@
 # Hexo Configuration
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
+## 文章的Front Matter中添加参数 sticky 即可实现首页置顶，数字越大排序越高（升序排序）
 
 # Site
 title: 点点滴滴
 subtitle:
-description: 点点滴滴,重在积累。
+description: 点点滴滴 重在积累
+keywords:
 author: Xiong
-language: zh-Hans
+language: zh-CN
 timezone:
 
 # URL
-## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://blog.gotwo.top/
-root: /
-permalink: :title.html
+## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
+url: https://xqmgithub.github.io/
+permalink: :title/
 permalink_defaults:
+pretty_urls:
+  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: true # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
@@ -25,25 +29,34 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: [google6b087412bce0c9a5.html,baidu_verify_83sUeklTyW.html,404.html,v.html]
+skip_render: [404.html]
 
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link:
+  enable: true # Open external links in new tab
+  field: site # Apply to the whole site
+  exclude: ''
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
-# 代码高亮设置
 highlight:
   enable: true
   line_number: true
-  # 代码自动高亮
   auto_detect: false
-  tab_replace:
+  tab_replace: ''
+  wrap: true
+  hljs: false
+prismjs:
+  enable: false
+  preprocess: true
+  line_number: true
+  tab_replace: ''
+
 
 # 搜索
 search:
@@ -51,7 +64,8 @@ search:
   field: post
   format: html
   limit: 10000
-  
+
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -60,11 +74,15 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
 tag_map:
+
+# Metadata elements
+## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
+meta_generator: true
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
@@ -72,32 +90,24 @@ tag_map:
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
+## updated_option supports 'mtime', 'date', 'empty'
+updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
 
-
-## 修改归档页面、某一分类页面、某一标签页面的显示篇数
-## 参考：http://theme-next.iissnan.com/faqs.html#setting-page-size
-archive_generator:
-  per_page: 0
-  yearly: false
-  monthly: false
-  daily: false
-  
-  # emoji 支持
-githubEmojis:
-  enable: true
-  idName: github-emoji
-  unicode: false
-  styles:
-  localEmojis:
+# Include / Exclude file(s)
+## include:/exclude: options only apply to the 'source/' folder
+include:
+exclude:
+ignore:
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
+# theme: maupassant
 theme: next
 
 Plugins:
@@ -113,25 +123,13 @@ sitemap:
   path: sitemap.xml
 baidusitemap:
   path: baidusitemap.xml
-  
 
-baidu_url_submit:
-  ## 比如3，代表提交最新的三个链接
-  count: 3 
-  ## 在百度站长平台中注册的域名
-  ## host: xqmcode.coding.me
-  host: blog.gotwo.top
-  ## 请注意这是您的秘钥，请不要发布在公众仓库里!
-  token: W6snksJHJP5d9KFb
-  ## 文本文档的地址，新链接会保存在此文本文档里
-  path: baidu_urls.txt
-  
 # Deployment
-## Docs: https://hexo.io/docs/deployment.html
+## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-- type: baidu_url_submitter
-- type: git
+  type: git  
   repo: 
     github: git@github.com:xqmGitHub/xqmgithub.github.io
-    coding: git@git.coding.net:xqmcode/xqmcode.git
   branch: master
+    
+
