--- a/package.json
+++ b/package.json
@@ -2,46 +2,42 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "build": "hexo generate",
+    "clean": "hexo clean",
+    "deploy": "hexo deploy",
+    "server": "hexo server"
+  },
   "hexo": {
-    "version": "3.9.0"
+    "version": "6.3.0"
   },
   "dependencies": {
-    "g": "^2.0.1",
-    "gulp-htmlclean": "^2.7.16",
-    "gulp-imagemin": "^4.1.0",
-    "hexo": "^3.2.0",
-    "hexo-baidu-url-submit": "0.0.5",
-    "hexo-cli": "^4.3.1",
-    "hexo-deployer-git": "^0.3.1",
-    "hexo-generator-archive": "^0.1.4",
-    "hexo-generator-baidu-sitemap": "^0.1.2",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index-pin-top": "^0.2.2",
-    "hexo-generator-searchdb": "^1.0.8",
-    "hexo-generator-sitemap": "^1.2.0",
-    "hexo-generator-tag": "^0.2.0",
-    "hexo-migrator-wordpress": "^0.1.2",
-    "hexo-neat": "^1.0.4",
-    "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-marked": "^0.3.0",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.23.6",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^4.0.2",
-    "gulp-asset-rev": "0.0.15",
-    "gulp-changed": "^3.2.0",
-    "gulp-clean-css": "^3.9.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-debug": "^3.2.0",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-make-css-url-version": "0.0.13",
+    "gulp-babel": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-cli": "^2.3.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^8.0.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-plumber": "^1.2.0",
-    "gulp-uglify": "^3.0.0",
-    "run-sequence": "^2.2.1"
+    "gulp-uglify": "^3.0.2",
+    "hexo": "^6.3.0",
+    "hexo-deployer-git": "^4.0.0",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-index": "^3.0.0",
+    "hexo-generator-search": "^2.4.3",
+    "hexo-generator-searchdb": "^1.4.1",
+    "hexo-generator-tag": "^2.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-pug": "^3.0.0",
+    "hexo-renderer-sass": "^0.5.0",
+    "hexo-renderer-stylus": "^2.1.0",
+    "hexo-server": "^3.0.0",
+    "hexo-theme-landscape": "^1.0.0"
   }
 }
